# rust-macro-workspace

./: .gitignore  Cargo.toml  LICENSE  README  README.md  cargo-generate.toml  rust-toolchain.toml
.github/workflows/: ci.yml
ffi/: Cargo.toml  build.rs
knowledge_ai/: Cargo.toml
macroe/: Cargo.toml
macroe/src/: callback.rs  class.rs  enum.rs  func.rs  lib.rs  model.rs
playground/: Cargo.toml
playground/src/: lib.rs  main.rs  mod1.rs  mod2.rs  mod3.rs
playground_dep/: Cargo.toml
playground_dep/src/: lib.rs
rt/: Cargo.toml
rt/src/: class.rs  func.rs  lib.rs  meta.rs
{{macroe}}/: Cargo.toml
{{playground}}/: Cargo.toml
{{playground}}/src/: main.rs
