[package]
name = "playground"
version = "0.1.0"
edition = "2021"
description = "A playground for macro use to test macro in macroe"

[dependencies]
macroe ={ path = "../macroe"}
rt = { path = "../rt"}
uuid = "1.16.0"
ctor = "0.4.1"

[build-dependencies]
macroe = { path = "../macroe" }
rt = { path = "../rt"}

